# GoodGreatIntensity

./: GoodGreatIntensity.cabal  flying_without_wings  good_ _but_not_great_4gm-0044.txt  good_but_not_great.txt  stack.yaml  testo.txt
app/: Core.hs  Count.hs  CountRoutines.hs  CountWords.hs  Main.hs  MainSubroutines.hs  PatternCompiler.hs  Patterns.hs  Query.hs  Score.hs  Scripts.hs  Subroutines.hs  System.hs  Untar.hs  Utils.hs  baseline.txt  foo.txt  good.txt  good_but_not_great_4gm.txt  great.txt
app/foo/: *_although_not_*.txt  *_andor_almost_*.txt  *_andor_even_*.txt  *_but_not_*.txt  *_or_very_*.txt  *_though_not_*.txt  good.txt  good_although_not_great.txt  good_andor_almost_great.txt  good_andor_even_great.txt  good_but_not_great.txt  good_great.txt  good_or_very_great.txt  good_though_not_great.txt  great_although_not_great.txt  great_andor_almost_great.txt  great_andor_even_great.txt  great_but_not_great.txt  great_or_very_good.txt  great_though_not_great.txt  not_*_although_still_*.txt  not_*_but_still_*.txt  not_*_just_*.txt  not_*_still_*.txt  not_*_though_still_*.txt  not_*but_just_*.txt  not_good_although_still_great.txt  not_good_but_still_great.txt  not_good_just_great.txt  not_good_still_great.txt  not_good_though_still_great.txt  not_goodbut_just_great.txt  not_great_although_still_good.txt  not_great_but_still_good.txt  not_great_just_good.txt  not_great_still_good.txt  not_great_though_still_good.txt  not_greatbut_just_good.txt  not_just_*_but_*.txt  not_just_good_but_great.txt  (+10 more)
app/results/: good_although_not_great_4gms.txt  good_although_not_great_5gms.txt  great.txt  great_although_not_good_4gms.txt  great_although_not_good_5gms.txt  great_but_not_good_4gm.txt
app/results/words/: acceptable.txt  awful.txt  best.txt  boggy.txt  characteristic.txt  damp.txt  moist.txt  muddy.txt  naive.txt  negative.txt  rainy.txt  satisfactory.txt  solid.txt  special.txt  specific.txt  terrible.txt  unique.txt  wet.txt  worse.txt
lib/: Conduits.hs
nlpgridscripts/: scipt1.sh
output/: before_w.txt  dummyTest.txt  good_ _although_not_great  p-strong-weak.txt  p-weak-strong.txt
results/: good_but_not_great.txt  good_but_not_great_5gm.txt  great_but_not_good_5gm.txt
results/good_great/: good__although_not_great.txt  good__but_not_great.txt  good__though_not_great.txt
results/words/: bad.txt  better.txt  childlike.txt  drippy.txt  dry.txt  evil.txt  good.txt  great.txt  humid.txt  innocent.txt  limited.txt  mediocre.txt  naif.txt  particular.txt  peculiar.txt  poor.txt  simple.txt  soggy.txt  sophisticated.txt  steamy.txt  sticky.txt  superb.txt  tacky.txt  uncharacteristic.txt  waterlogged.txt  watery.txt  worst.txt
scripts/: logs  main.sh
shell/: logs  main.sh  scrub-4gms.sh
src/: CatZipFiles.hs  ConduitLib.hs  ConduitParse.hs  ConduitUtils.hs  Conduits.hs  Core.hs  Count.hs  CountNgram  CountNgram.hs  Dep.hs  Lib.hs  Misc.hs  NgramParser.hs  ParserLib.hs  Parsers.hs  Patterns.hs  Play.hs  Preprocess.hs  Query.hs  Score.hs  Src.hs  Utils.hs  great.txt  log.txt  parserTut.hs  sample.txt
test/: CatZipFiles.hs  NgramParserTest.hs  ParserLib.hs  ParserTest.hs  PatternCompilerTest.hs  PatternTest.hs  Spec.hs
tests/: PatternCompilerTest.hs
