name:                GoodGreatIntensity
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lingxiao/GoodGreatIntensity
license:             BSD3
license-file:        LICENSE
author:              Xiao Ling
maintainer:          lingxiao@seas.upenn.edu
copyright:           2016 Xiao Ling
category:            Natural Language Processing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib

  other-modules  :     Core
                    ,  ConduitLib
                    ,  CountNgram

  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , zlib
                     , base
                     , text
                     , conduit
                     , conduit-extra 
                     , conduit-combinators
                     , filepath
                     , resourcet
                     , transformers
                     , bytestring
                     , resourcet
                     , directory

  default-language:    Haskell2010

executable GoodGreatIntensity-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , GoodGreatIntensity
  default-language:    Haskell2010

test-suite GoodGreatIntensity-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  build-depends:       base >= 4.7 && < 5
                     , GoodGreatIntensity
                     , mtl
                     , zlib
                     , base
                     , text
                     , conduit
                     , conduit-extra 
                     , zip
                     , bytestring
                     , resourcet
                     , directory

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/GoodGreatIntensity
