name:                GoodGreatIntensity
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lingxiao/GoodGreatIntensity
license:             BSD3
license-file:        LICENSE
author:              Xiao Ling
maintainer:          lingxiao@seas.upenn.edu
copyright:           2016 Xiao Ling
category:            Natural Language Processing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                    ,  Core
                    ,  Parsers
                    ,  Conduits
                    ,  Preprocess

  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , zlib
                     , text
                     , split
                     , conduit
                     , conduit-extra 
                     , conduit-combinators
                     , directory
                     , filepath
                     , resourcet
                     , transformers
                     , bytestring
                     , directory
                     , attoparsec
                     , HUnit

  default-language:    Haskell2010

executable GoodGreatIntensity-exe
  hs-source-dirs:      app
  main-is:             Main.hs

  other-modules  :     MainSubroutines
                     , Score
                     , Patterns
                     , Untar

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , GoodGreatIntensity
                     , mtl
                     , zlib
                     , text
                     , split
                     , conduit
                     , conduit-extra 
                     , conduit-combinators
                     , directory
                     , filepath
                     , resourcet
                     , transformers
                     , bytestring
                     , directory
                     , attoparsec
                     , HUnit

  default-language:    Haskell2010

test-suite GoodGreatIntensity-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs

  other-modules  :     ParserTest
                    ,  PreprocessTest
                    ,  PatternTest

  build-depends:       base >= 4.7 && < 5
                     , GoodGreatIntensity
                     , HUnit

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/GoodGreatIntensity
